grammar/cilang.bnf
# CI-Lang v1.0 Formal Grammar (EBNF)
# Bimodal Stability Specification

program       = { statement } ;

statement     = var_decl
              | func_decl
              | agent_decl
              | spawn_stmt
              | if_stmt
              | while_stmt
              | push_stmt
              | print_stmt
              | expression ;

# --- Declarations ---
var_decl      = "let" identifier "=" expression [ ";" ] ;

func_decl     = "def" identifier "(" [ param_list ] ")" ":" block ;

agent_decl    = "agent" identifier ":" newline indent 
                "state" ":" block
                "update" "(" identifier ")" ":" block
                dedent ;

spawn_stmt    = "spawn" identifier "size" "=" number [ ";" ] ;

# --- Blocks (Bimodal) ---
block         = ":" ( single_statement | multi_line_block ) ;

single_statement = statement ;

multi_line_block = newline indent { statement } dedent
                 | "{" { statement } "}" ;

# --- Control Flow ---
if_stmt       = "if" expression ":" block [ "else" ":" block ] ;

while_stmt    = "while" expression ":" block ;

push_stmt     = "push" expression [ ";" ] ;

print_stmt    = "print" "(" expression ")" [ ";" ] ;

# --- Expressions ---
expression    = binary_op ;

binary_op     = unary_op { operator unary_op } ;

operator      = "+" | "-" | "*" | "/" | "→" | "≈" | "==" | ">" | "<" ;

unary_op      = [ "-" ] primary ;

primary       = number
              | string
              | identifier
              | "(" expression ")"
              | call_expr ;

call_expr     = identifier "(" [ arg_list ] ")" ;

# --- Tokens ---
identifier    = [a-zA-Z_][a-zA-Z0-9_]* ;
number        = [0-9]+(\.[0-9]+)? ;
string        = "\"" .*? "\"" ;
indent        = <LEXER_INDENT> ;
dedent        = <LEXER_DEDENT> ;
newline       = <LEXER_NEWLINE> ;
